--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -23,3 +23,16 @@ form{
     color: #000;
     margin: 0;
 }
+
+input.ng-valid{
+    border: 1px solid green;
+}
+
+input.ng-dirty.ng-invalid{
+    border: 1px solid red;
+}
+
+.prompt{
+    font-size: 12px;
+    color: #bcbcbc;
+}
